fix(release): add brews config for homebrew tap updates

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -116,3 +116,17 @@ changelog:
       - Merge pull request
       - Merge branch
 
+brews:
+  - name: airwallex-cli
+    repository:
+      owner: salmonumbrella
+      name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
+    directory: Formula
+    homepage: "https://github.com/salmonumbrella/airwallex-cli"
+    description: "CLI for Airwallex API"
+    license: "MIT"
+    install: |
+      bin.install "airwallex"
+    test: |
+      system "#{bin}/airwallex", "--help"
