fix: disable homebrew publishing to prevent broken formulas
GoReleaser v2 generates formulas with def install inside CPU blocks,
which triggers Sorbet/BlockMethodDefinition linter errors in Homebrew.

The homebrew-tap's update-formulas.yml workflow will handle updates
using correctly structured formulas.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -118,6 +118,7 @@ changelog:
 
 brews:
   - name: airwallex-cli
+    skip_upload: true
     repository:
       owner: salmonumbrella
       name: homebrew-tap
